--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark" id="nav" mdbStickyHeader>
 
   <!-- Navbar brand -->
-  <mdb-navbar-brand><a class="navbar-brand" href="/home"><img
+  <mdb-navbar-brand><a class="navbar-brand" [routerLink]="['']"><img
         src="https://i.ibb.co/qRDPTRx/IEEE-Logo-No-Text-Darkest.png" height="60vmin" alt="Icon IEEE-ITBA"></a>
   </mdb-navbar-brand>
 
