--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -33,7 +33,7 @@
         <button mat-menu-item [routerLink]="['/team']">{{ 'NAVBAR.TEAM' | translate }}</button>
         <button mat-menu-item [routerLink]="['/ras']">RAS</button>
         <button mat-menu-item onclick="window.location.href = 'https://csitba.web.app/'">CS</button>
-        <button mat-menu-item onclick="window.location.href = 'https://linktr.ee/wie_itba'">WIE</button>
+        <button mat-menu-item onclick="window.location.href = 'https://wie-itba.github.io/'">WIE</button>
       </mat-menu>
       <li class="nav-item">
         <button [routerLink]="['/contact']" class="buttonNavbar" type="button">{{ 'NAVBAR.CONTACT' |
