--- a/src/app/modules/iot/pages/iot/iot.component.css
+++ b/src/app/modules/iot/pages/iot/iot.component.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
 @import '~swiper/swiper-bundle.min.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+
 html {
     /*min-height: 200%;*/
     background-size: cover;
@@ -10,8 +11,9 @@ body {
     background: rgb(255, 255, 255);
     background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
     background-size: cover;
+    font-size: 1.2em;
     font-family: "Roboto", Arial, Helvetica, sans-serif;
-  }
+}
 
 .col-sm {
     margin-top: 1vmin;
@@ -37,16 +39,16 @@ body {
 }
 
 .course-title {
-    font-size: calc(1.5vw + 1rem);
+    font-size: calc(1.5vw + 1.2rem);
     font-weight: 400;
     color: #0d47a1;
     letter-spacing: 1px;
 }
 .course-subtitle {
-    font-size: calc(0.7vw + 0.7rem);
+    font-size: calc(0.7vw + 1rem);
     color: rgba(13, 71, 161, 0.8);
     font-weight: 600;
-    margin: 0.5rem 20px;
+    margin: 1rem 20px;
 }
 
 .desc-text{
@@ -83,43 +85,64 @@ body {
     flex:auto;
 }
 
-
 .carousel-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+    width: 90%;
 }
 
-.pagination-wrapper{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 1rem 0 0.25rem;
-  transform: scale(1.5);    /* Enlarge bullets */
-  gap: 0.25rem;             /* Gap between bullets */
+.section {
+    margin-top: 3rem;
 }
 
-.pagination-prev-wrapper {
-  margin-right: 1.5rem;
+.faq-section {
+  margin-top: 3rem;
+  margin-bottom: 4rem;
 }
 
-.pagination-next-wrapper {
-  margin-left: 1.5rem;
+.faq-accordion {
+  margin-top: 1.5rem;
+}
+.faq-panel {
+  height:max-content;
+}
+.faq-question {
+  font-size: 1rem;
+}
+.faq-answer {
+  font-size: larger;
+  margin: 1rem 0 0 0;
 }
 
-.pagination-prev {
-  height: 4rem;
-  width: 4rem;
-  background-color: #007aff;
-  --swiper-navigation-color: #f0f0f0;
-  border-radius: 45% 25% 25% 45%;
+::ng-deep .mat-tab-list .mat-tab-labels .mat-tab-label-active {
+  color:rgb(23, 46, 148);
+  background-color: transparent;
 }
 
-.pagination-next {
-  height: 4rem;
-  width: 4rem;
-  background-color: #007aff;
-  --swiper-navigation-color: #f0f0f0;
-  border-radius: 25% 45% 45% 25%;
+::ng-deep .mat-ink-bar {
+  background-color: var(--primary-color,whitesmoke) !important;
+}
+
+::ng-deep .mat-expansion-indicator::after {
+  color:rgb(23, 46, 148);
+}
+
+mat-panel-description {
+  text-align: right;
+}
+
+mat-expansion-panel {
+  background-color: transparent;
+  margin-top: 1.5vmin;
+}
+
+mat-expansion-panel-header {
+  border: rgb(23, 46, 148) 1px solid;
+  border-radius: 5vmin;
+}
+
+mat-panel-title {
+  color:rgb(23, 46, 148);
 }
