--- a/src/app/modules/iot/pages/iot/iot.component.html
+++ b/src/app/modules/iot/pages/iot/iot.component.html
@@ -14,7 +14,7 @@
       <img
         src="../../../../../assets/image/courses/iot-banner.jpeg"
         class="max-width"
-        alt="Asimov Cup - Competencia de Robótica"
+        alt="Banner IOT"
       />
     </div>
     <div class="topbottomLine" id="home" style="margin-bottom:2%">
@@ -28,52 +28,43 @@
     </div>
 
     <!-- Introductory text -->
-    <div>
+    <div class="section">
         <h2 class="course-subtitle">{{ 'IOT.DESC.TITLE' | translate }}</h2>
         <p class="desc-text">{{ 'IOT.DESC.TEXT.1' | translate }}</p>
         <p class="desc-text">{{ 'IOT.DESC.TEXT.2' | translate }}</p>
         <p class="desc-text">{{ 'IOT.DESC.TEXT.3' | translate }}</p>
         <p class="desc-text">{{ 'IOT.DESC.TEXT.4' | translate }}</p>
-        <p class="desc-text">{{ 'IOT.DESC.TEXT.5' | translate }}</p>
-        <h2 class="course-subtitle">{{ 'IOT.GALLERY_TITLE' | translate }}</h2>
-
-        <!-- <div class="carousel-wrapper">
-          <div class="pagination-prev-wrapper">
-            <span class="swiper-button-prev pagination-prev"></span>
-          </div>
-          <swiper [config]="swiperConfig">
-            <ng-container *ngFor="let image of images">
-              <ng-template swiperSlide>
-                  <mat-card class="news-card" >
-                    <img class="news-card-img" mat-card-image
-                    [src]="image" alt="Foto IOT">
-                </mat-card>
-              </ng-template>
-            </ng-container>
-          </swiper>
-          <div class="pagination-next-wrapper">
-            <span class="swiper-button-next pagination-next"></span>
-          </div>
-        </div> -->
-        <swiper
-      [slidesPerView]="2"
-      [spaceBetween]="10"
-      [navigation]="true"
-      [autoplay]="{
-        delay: 2500,
-        disableOnInteraction: false
-      }"
-      class="mySwiper"
-    >
-  <ng-template swiperSlide *ngFor="let image of images"><mat-card class="news-card" >
-      <img class="news-card-img" mat-card-image
-      [src]="image" alt="Foto IOT">
-    </mat-card>
-  </ng-template>
-    </swiper>
-
     </div>
 
+    <div class="section">
+        <h2 class="course-subtitle">{{ 'IOT.GALLERY_TITLE' | translate }}</h2>
+        <swiper [config]="swiperConfig" class="carousel-wrapper">>
+          <ng-template swiperSlide *ngFor="let image of images">
+            <mat-card class="news-card">
+              <img class="news-card-img" mat-card-image [src]="image" alt="Foto IOT">
+            </mat-card>
+          </ng-template>
+        </swiper>
+    </div>
+
+    <div class="faq-section">
+      <h2 class="course-subtitle">{{ 'IOT.FAQ.TITLE' | translate }}</h2>
+      <mat-accordion class="faq-accordion">
+
+        <mat-expansion-panel class="mat-elevation-z0" *ngFor="let qa of faq">
+          <mat-expansion-panel-header [collapsedHeight]="'max-content'" [expandedHeight]="'max-content'">
+            <mat-panel-title class="faq-question mt-1 mb-1">
+              {{ qa.q | translate}}
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+
+          <p class="faq-answer">{{ qa.a | translate}}</p>
+        </mat-expansion-panel>
+
+      </mat-accordion>
+    </div>
+
+    <hr>
     <app-footer></app-footer>
 
 </body>
