--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,64 +1,64 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark" id="nav" mdbStickyHeader>
-
+<mdb-navbar
+  SideClass="navbar navbar-expand-xl navbar-dark"
+  id="nav"
+  mdbStickyHeader
+>
   <!-- Navbar brand -->
   <mdb-navbar-brand><a class="navbar-brand" [routerLink]="['']"><img
           src="../../../../assets/image/general-icons/IEEE-Logo-No-Text-Darkest.png" height="60vmin" alt="Icon IEEE-ITBA"></a>
   </mdb-navbar-brand>
 
   <!-- All Items -->
-  <links>
-
+  <links id="myNavItems" class="navItems">
     <!-- Menu -->
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <button [routerLink]="['/about-us']" class="buttonNavbar" type="button">{{ 'NAVBAR.ABOUTUS' |
-          translate
-          }}</button>
+    <ul class="navbar-nav">
+      <li class="nav-item m-auto">
+        <button [routerLink]="['/about-us']" class="buttonNavbar" type="button">
+          {{ 'NAVBAR.ABOUTUS' | translate }}
+        </button>
       </li>
-      <li class="nav-item">
-        <button [routerLink]="['/noticias']" class="buttonNavbar" type="button">{{ 'NAVBAR.NEWS' |
-          translate
-          }}</button>
+      <li class="nav-item m-auto">
+        <button [routerLink]="['/noticias']" class="buttonNavbar" type="button">
+          {{ 'NAVBAR.NEWS' | translate }}
+        </button>
       </li>
-      <li class="nav-item">
-        <button [routerLink]="['/events']" class="buttonNavbar" type="button">{{ 'NAVBAR.EVENTS' |
-          translate
-          }}</button>
+      <li class="nav-item m-auto">
+        <button [routerLink]="['/events']" class="buttonNavbar" type="button">
+          {{ 'NAVBAR.EVENTS' | translate }}
+        </button>
       </li>
-      <li class="nav-item">
-        <button [routerLink]="['/sponsors']" class="buttonNavbar" type="button">{{ 'NAVBAR.SPONSORS' |
-          translate
-          }}</button>
+      <li class="nav-item m-auto">
+        <button [routerLink]="['/sponsors']" class="buttonNavbar" type="button">
+          {{ 'NAVBAR.SPONSORS' | translate }}
+        </button>
       </li>
-      <li class="nav-item">
-        <button class="buttonNavbar" type="button" [matMenuTriggerFor]="institutionalMenu">{{ 'NAVBAR.INSTITUTIONAL' | translate }}</button>
+      <li class="nav-item m-auto">
+        <button class="buttonNavbar dropdown-toggle" type="button" [matMenuTriggerFor]="institutionalMenu">
+          {{ 'NAVBAR.INSTITUTIONAL' | translate }}
+        </button>
       </li>
-      <mat-menu #institutionalMenu="matMenu" xPosition="before" yPosition="below">
-        <button mat-menu-item [routerLink]="['/team']">{{ 'NAVBAR.TEAM' | translate }}</button>
-        <button mat-menu-item [routerLink]="['/ras']">RAS</button>
-        <button mat-menu-item onclick="window.location.href = 'https://csitba.web.app/'">CS</button>
-        <button mat-menu-item onclick="window.location.href = 'https://wie-itba.github.io/'">WIE</button>
-      </mat-menu>
-      <li class="nav-item">
-        <button [routerLink]="['/contact']" class="buttonNavbar" type="button">{{ 'NAVBAR.CONTACT' |
-          translate
-          }}</button>
+      <li class="nav-item m-auto">
+        <button [routerLink]="['/contact']" class="buttonNavbar" type="button">
+          {{ 'NAVBAR.CONTACT' | translate }}
+        </button>
       </li>
-      <li class="nav-item" *ngIf="journalist">
-        <button [routerLink]="['/write-news']" class="buttonNavbar" type="button">{{ 'WRITE-NEW.TITLE' | translate }}</button>
+      <li class="nav-item m-auto" *ngIf="journalist">
+        <button [routerLink]="['/write-news']" class="buttonNavbar" type="button">
+          {{ 'WRITE-NEW.TITLE' | translate }}
+        </button>
       </li>
     </ul>
 
     <!-- Icons on right -->
-    <ul class="navbar-nav ml-auto nav-flex-icons">
+    <ul class="navbar-nav nav-last d-flex flex-row justify-content-center align-content-center">
       <li class="nav-item">
-        <a href="https://www.linkedin.com/company/ieee-itba" class="nav-link">
+        <a href="https://www.linkedin.com/company/ieee-itba" class="nav-link custom-nav-icon">
           <i class="fab fa-linkedin-in"></i>
         </a>
       </li>
       <li class="nav-item">
-        <a href="https://www.instagram.com/ieee.itba/" class="nav-link">
+        <a href="https://www.instagram.com/ieee.itba/" class="nav-link custom-nav-icon">
           <i class="fab fa-instagram"></i>
         </a>
       </li>
@@ -72,16 +72,22 @@
       <!-- Dropdown -->
       <li class="nav-item">
         <a [matMenuTriggerFor]="menu" class="nav-link">
-          <i class="fas fa-user-circle" style="font-size: large;"></i>
-          <div id="account" style="display: inline;"></div>
+          <div class="profile-button-container">
+            <i class="fas fa-user-circle" style="font-size: x-large"></i>
+            <div id="account" style="display: inline"></div>
+          </div>
         </a>
       </li>
-
     </ul>
-
   </links>
-
 </mdb-navbar>
+
+<mat-menu #institutionalMenu="matMenu" xPosition="before" yPosition="below">
+  <button mat-menu-item [routerLink]="['/team']">{{ 'NAVBAR.TEAM' | translate }}</button>
+  <button mat-menu-item [routerLink]="['/ras']">RAS</button>
+  <button mat-menu-item onclick="window.location.href = 'https://csitba.web.app/'">CS</button>
+  <button mat-menu-item onclick="window.location.href = 'https://wie-itba.github.io/'">WIE</button>
+</mat-menu>
 
 <mat-menu #menu="matMenu" xPosition="before" yPosition="below">
   <button mat-menu-item *ngIf="logguedIn" (click)="logoutUser()">{{ 'LOGOUT.TITLE' | translate }}</button>
