--- a/src/app/shared/components/loading-spinner/loading-spinner.component.html
+++ b/src/app/shared/components/loading-spinner/loading-spinner.component.html
@@ -1,5 +1,5 @@
 <div class="spinner-container">
-  <div class="lds-roller" [style.--color]="color">
+  <div class="lds-roller" [style.--color]="(getAppColors() | async).background">
     <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
   </div>
 </div>
